minor adjustments and translations

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <path d="M50 200h50l50-25h50l25-25h175l25 12.5h50l25 12.5h-25l-100 50-25 25-25 50-50 25h-25l-25-25v-75h-25v-75h-25v-25L75 25"/>
                   <path d="m325 50 12.5 25v25l12.5 25 25 25-50 50h-75v25h-25l-25 25h-75v50l-50 50m375-25-25-25h-50v-25l-50 25"/>
                 </g>
-                <path id="ferry-path" fill="none" stroke="var(--clr-ferry)" stroke-dasharray="12 6" stroke-opacity=".867" stroke-width="6" d="m225 400 25 25h75s10.355 0 17.678-7.322S350 400 350 400v-50l25-25-25-25s0-8.757 5.743-22.621 16.354-24.476 16.354-24.476L375 250v-25h25s1.014-1.014 14.88-6.757 28.87-5.743 28.87-5.743h43.75L500 225"/>
+                <path id="ferry-path" fill="none" stroke="var(--clr-ferry, #222)" stroke-dasharray="12 6" stroke-opacity=".867" stroke-width="6" d="m225 400 25 25h75s10.355 0 17.678-7.322S350 400 350 400v-50l25-25-25-25s0-8.757 5.743-22.621 16.354-24.476 16.354-24.476L375 250v-25h25s1.014-1.014 14.88-6.757 28.87-5.743 28.87-5.743h43.75L500 225"/>
                 <g id="bus-path" fill="none" stroke="var(--clr-bus, green)" stroke-width="6">
                   <path d="m400 400-25-25h-75v-25h-25l-25-25h-25l-25-25v-25l-25-25h-50l25 25v100h-25l-25 25v-25l-25-25-25 25H25l25 25h25l12.5 12.5h25L125 400h25l25-25h50l25-25v-25h150l25-25 25 25h75l25 25h25l-50 50h-50"/>
                   <path d="M75 350H50l-25-25h75l25-25-12.5-12.5v-25L125 250H25v75m75 75H75m75-50 50 50h75l50-50V200l-25-25v-25l-50-50V25l125 125v-25h25l25-25h25l25-25h50l25 25v50l-50 50v25h-75l-75 75h-50l-25 25"/>
@@ -178,7 +178,7 @@
                   <circle cx="375" cy="175" r="10.5"/>
                   <circle cx="425" cy="350" r="10.5"/>
                 </g>
-                <g id="taxi-indicator" stroke="var(--clr-black)" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" transform="translate(0 -550)">
+                <g id="taxi-indicator" stroke="var(--clr-black, black)" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" transform="translate(0 -550)">
                   <g fill="var(--clr-white, white)">
                     <circle cx="75" cy="575" r="7.5" id="1" />
                     <circle cx="50" cy="600" r="7.5" id="8" />
@@ -383,7 +383,7 @@
                     <circle cx="225" cy="950" r="7.5" id="194" />
                   </g>
                 </g>
-                <g id="field-numbers" fill="var(--clr-black)" font-family="sans-serif" font-size="6.667" letter-spacing="-.5" text-anchor="middle" word-spacing="0">
+                <g id="field-numbers" fill="var(--clr-black, black)" font-family="sans-serif" font-size="6.667" letter-spacing="-.5" text-anchor="middle" word-spacing="0">
                   <text xml:space="preserve" x="75" y="577.5" style="line-height:1.25" transform="translate(0 -550)"><tspan x="74.75" y="577.5">1</tspan></text>
                   <text xml:space="preserve" x="50" y="602.5" style="line-height:1.25" transform="translate(0 -550)"><tspan x="49.75" y="602.5">8</tspan></text>
                   <text xml:space="preserve" x="25" y="627.5" style="line-height:1.25" transform="translate(0 -550)"><tspan x="24.75" y="627.5">18</tspan></text>
